--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-version: '2.3'
+version: '3'
 services:
   kazoo:
     container_name: kazoo
-    hostname: kazoo.local
+    hostname: kazoo.kazoo
     build:
       args:
         KAZOO_VERSION: 4.1.43
@@ -11,9 +11,9 @@ services:
     image: telephoneorg/kazoo:${DOCKER_TAG:-latest}
     environment:
       ERLANG_HOSTNAME: long
-      ERLANG_COOKIE: test-cookie
-      RABBITMQ_HOST: rabbitmq.local
-      COUCHDB_HOST: couchdb.local
+      ERLANG_COOKIE: change-me
+      RABBITMQ_HOST: rabbitmq.kazoo
+      COUCHDB_HOST: couchdb.kazoo
       KAZOO_LOG_LEVEL: info
     ports:
     - "5555:5555"
@@ -23,9 +23,9 @@ services:
     tmpfs:
     - /tmp
     networks:
-      local:
+      kazoo:
         aliases:
-        - kazoo.local
+        - kazoo.kazoo
     cap_add:
     - SYS_NICE
     - SYS_RESOURCE
@@ -36,24 +36,24 @@ services:
         condition: service_healthy
   rabbitmq:
     container_name: rabbitmq
-    hostname: rabbitmq.local
+    hostname: rabbitmq.kazoo
     image: telephoneorg/rabbitmq:latest
     environment:
       ERLANG_HOSTNAME: long
-      ERLANG_COOKIE: test-cookie
+      ERLANG_COOKIE: change-me
     tmpfs:
     - /var/lib/rabbitmq/mnesia
     networks:
-      local:
+      kazoo:
         aliases:
-        - rabbitmq.local
+        - rabbitmq.kazoo
   couchdb:
     container_name: couchdb
-    hostname: couchdb.local
+    hostname: couchdb.kazoo
     image: telephoneorg/couchdb:latest
     environment:
       COUCHDB_DEV_INIT: 'true'
-      ERLANG_COOKIE: test-cookie
+      ERLANG_COOKIE: change-me
       COUCHDB_ADMIN_USER: admin
       COUCHDB_ADMIN_PASS: secret
       COUCHDB_SHARDS: '1'
@@ -62,9 +62,9 @@ services:
     - "5984:5984"
     - "5986:5986"
     networks:
-      local:
+      kazoo:
         aliases:
-        - couchdb.local
+        - couchdb.kazoo
     volumes_from:
     - couchdb-data
   kzutil:
@@ -77,4 +77,4 @@ services:
     build: images/couchdb-data
     image: telephoneorg/couchdb-data:${DOCKER_TAG:-latest}
 networks:
-  local:
+  kazoo:
